fix pagination and filter position on small screens

--- a/src/components/DisplayGuild/index.sass
+++ b/src/components/DisplayGuild/index.sass
@@ -51,9 +51,10 @@
     &LatestTable
         max-width: 1000px
         margin: auto
-    &RosterTable
+    &RosterContainer
         max-width: 1000px
         margin: auto
+        align-items: flex-end
     &NavTabs
 
 
